# flake8-peewee

./: .gitignore  README.md  flake8_peewee.py  setup.cfg
tests/: test_flake8_peewee.py
